deploy/sp-istio-agent-minimal.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: softprobe-backend
  namespace: istio-system
spec:
  hosts:
  - o.softprobe.ai
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
